Add tailwind and postcss config

--- a/app/views/stories/show.erb
+++ b/app/views/stories/show.erb
@@ -1,5 +1,5 @@
-<header>
-  <nav><a href="" rel="author">Santos J Romeo</a></nav>
+<header class="header">
+  <nav class="header--nav"><a href="" rel="author">Santos J Romeo</a></nav>
   <h2>Adventures of Me and Martha Jane by Santos J. Romeo</h2>
 </header>
 
