--- a/app/views/stories/show.erb
+++ b/app/views/stories/show.erb
@@ -8,7 +8,7 @@
   </div>
 </header>
 
-<div class="container mx-auto px-4 leading-normal text-xl">
+<div class="container lg:w-3/5 md:w-4/5 mx-auto px-4 leading-normal text-xl">
 
   <h3 class="font-semibold text-2xl mb-6">Chapter 1A</h3>
 
