--- a/app/views/stories/show.erb
+++ b/app/views/stories/show.erb
@@ -3,12 +3,29 @@
     <img class="max-w-full max-h-full" src="<%= asset_pack_path 'images/logo.png' %>" />
   </div>
   <div class="flex-1 mt-6">
-    <nav><a href="" rel="author">Santos J Romeo</a></nav>
+    <nav><a href="" rel="author">Santos J Romeo's Stories</a></nav>
     <h2 class="font-semibold text-3xl">Adventures of Me and Martha Jane by Santos J. Romeo</h2>
   </div>
 </header>
 
 <div class="container lg:w-3/5 md:w-4/5 mx-auto px-4 leading-normal text-xl">
+
+  <blockquote class="mx-10 mb-20 mt-20">
+    <h4>INTRO 1999:</h4>
+    <p>The first version of this story, posted in 1995, was half the size of the current version. Many readers of the first
+      version email'd me and wanted "more detail." The reader is warned that more detail has been added to the new version,
+      but those details make for a slower- moving and much longer tale. For example, in the original version there was a
+      two-week sequence of events in the last half of the story; this time period made for a more suspenseful plot device.
+      But in actuality the period was two months long, not two weeks. This version is more historically accurate.</p>
+
+    <p>Nevertheless, it's impossible to accurately reenact everything. Much of it is boring and inconsequential. As before,
+      names are changed, many real-life characters are combined into a single figure in the story, and many events are combined.
+      And there are the damn typo's, which never go away. Stop complaining. Life itself is a typo. One canstand only so much
+      reality.
+    </p>
+
+    <p>- S. J. R.</p>
+  </blockquote>
 
   <h3 class="font-semibold text-2xl mb-6">Chapter 1A</h3>
 
