Extract author, intro text and copyright notice & make space in stories#show for all of them

--- a/app/views/stories/show.erb
+++ b/app/views/stories/show.erb
@@ -271,8 +271,9 @@
     hugged her and apologized again and again, and she accepted and hugged me back and got me ready for bed.</p>
 </div>
 
-<footer class="container mx-auto px-4 mb-24 mt-6 border-grey-darkest pt-6 border-t">
-  <nav>
+<footer class="container flex mx-auto px-4 mb-24 mt-6 border-grey-darkest pt-6 border-t">
+  <nav class="flex-1">
     <a href="">Previous Chapter</a> | <a href="">Next Chapter</a>
   </nav>
+  <p class="w-1/3 md:w-auto">Copyright© 1999 by Santos J. Romeo</p>
 </footer>
