--- a/app/views/stories/show.erb
+++ b/app/views/stories/show.erb
@@ -1,3 +1,7 @@
+<% content_for :title do -%><%= @story.name %> by <%= @story.author.name %><% end -%>
+<% content_for :description do -%><%= @story.description %><% end -%>
+
+
 <header class="flex flex-row mb-6 mt-6">
   <div class="flex-none w-8 m-5">
     <img class="max-w-full max-h-full" src="<%= asset_pack_path 'images/logo.png' %>" />
@@ -23,5 +27,5 @@
   <nav class="flex-1">
     <a href="">Previous Chapter</a> | <a href="">Next Chapter</a>
   </nav>
-  <p class="w-1/3 md:w-auto">Copyright© 1999 by Santos J. Romeo</p>
+  <p class="w-1/3 md:w-auto"><%= @story.copyright_notice %></p>
 </footer>
