--- a/app/views/stories/show.erb
+++ b/app/views/stories/show.erb
@@ -13,7 +13,6 @@
 </header>
 
 <div class="container lg:w-3/5 md:w-4/5 mx-auto px-4 leading-normal text-xl">
-
   <blockquote class="mx-10 mb-20 mt-20">
     <%= @story.intro.html_safe %>
   </blockquote>
@@ -25,7 +24,7 @@
 
 <footer class="container flex mx-auto px-4 mb-24 mt-6 border-grey-darkest pt-6 border-t">
   <nav class="flex-1">
-    <a href="">Previous Chapter</a> | <a href="">Next Chapter</a>
+    <a href="<%= story_path(id: @story.id, slug: @story.slug) %>">Previous Chapter</a> | <a href="">Next Chapter</a>
   </nav>
   <p class="w-1/3 md:w-auto"><%= @story.copyright_notice %></p>
 </footer>
