--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>Koal<%= content_for(:title) ? " » #{yield :title}" : "" %></title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <% if content_for(:description) -%>
       <meta name="description" content="<%= yield :description %>" />
     <% end -%>
