--- a/app/views/stories/show.erb
+++ b/app/views/stories/show.erb
@@ -6,7 +6,7 @@
   <div class="flex-none w-8 m-5">
     <img class="max-w-full max-h-full" src="<%= asset_pack_path 'images/logo.png' %>" />
   </div>
-  <div class="flex-1 mt-6">
+  <div class="flex-1 mt-6 mr-2">
     <nav><a href="" rel="author"><%= @story.author.name %>'s Stories</a></nav>
     <h2 class="font-semibold text-3xl"><%= @story.name %> by <%= @story.author.name %></h2>
   </div>
@@ -22,9 +22,9 @@
   <%= @chapter.contents.html_safe %>
 </div>
 
-<footer class="container flex mx-auto px-4 mb-24 mt-6 border-grey-darkest pt-6 border-t">
+<footer class="container flex mx-auto px-4 mb-24 mt-6 leading-normal border-grey-darkest pt-6 border-t">
   <nav class="flex-1">
-    <a href="<%= story_path(id: @story.id, slug: @story.slug) %>">Previous Chapter</a> | <a href="">Next Chapter</a>
+    <a class="inline-block" href="<%= story_path(id: @story.id, slug: @story.slug) %>">Previous Chapter</a> | <a class="inline-block" href="">Next Chapter</a>
   </nav>
   <p class="w-1/3 md:w-auto"><%= @story.copyright_notice %></p>
 </footer>
