--- a/app/views/stories/show.erb
+++ b/app/views/stories/show.erb
@@ -13,9 +13,11 @@
 </header>
 
 <div class="container lg:w-3/5 md:w-4/5 mx-auto px-4 leading-normal text-xl">
+<% if @chapter.first? -%>
   <blockquote class="mx-10 mb-20 mt-20">
     <%= @story.intro.html_safe %>
   </blockquote>
+<% end -%>
 
   <h3 class="font-semibold text-2xl mb-6"><%= @chapter.title %></h3>
 
@@ -24,7 +26,13 @@
 
 <footer class="container flex mx-auto px-4 mb-24 mt-6 leading-normal border-grey-darkest pt-6 border-t">
   <nav class="flex-1">
-    <a class="inline-block" href="<%= story_path(id: @story.id, slug: @story.slug) %>">Previous Chapter</a> | <a class="inline-block" href="">Next Chapter</a>
+    <% unless @chapter.first? -%>
+    <a class="inline-block" href="<%= story_path(id: @story.id, slug: @story.slug, chapter_order: @chapter.order - 1) %>">Previous Chapter</a>
+    <% end -%>
+    <% unless @chapter.last? -%>
+    |
+    <a class="inline-block" href="<%= story_path(id: @story.id, slug: @story.slug, chapter_order: @chapter.order + 1) %>">Next Chapter</a>
+    <% end -%>
   </nav>
   <p class="w-1/3 md:w-auto"><%= @story.copyright_notice %></p>
 </footer>
