--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,9 @@
   <head>
     <title>Koal<%= content_for(:title) ? " » #{yield :title}" : "" %></title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="rating" content="mature"/>
     <% if content_for(:description) -%>
       <meta name="description" content="<%= yield :description %>" />
     <% end -%>
