Tweak story page design

--- a/app/views/stories/show.erb
+++ b/app/views/stories/show.erb
@@ -7,8 +7,8 @@
     <a href="<%= root_path %>"><img class="max-w-full max-h-full" src="<%= asset_pack_path 'images/logo.png' %>" /></a>
   </div>
   <div class="flex-1 mt-6 mr-2">
-    <nav><a href="" rel="author"><%= @story.author.name %>'s Stories</a></nav>
-    <h2 class="font-semibold text-3xl"><%= @story.name %> by <%= @story.author.name %></h2>
+    <nav><a href="" rel="author"><%= @story.author.name %>'s</a></nav>
+    <h2 class="font-semibold text-3xl"><%= @story.name %></h2>
   </div>
 </header>
 
