Deploy with a Procfile and a CHECKS file

--- a/app/views/stories/index.erb
+++ b/app/views/stories/index.erb
@@ -10,7 +10,7 @@ Koal curates over <%= Story.count %> stories (from <%= Author.count %> authors) 
     <a href="<%= root_path %>"><img class="max-w-full max-h-full" src="<%= asset_pack_path 'images/logo.png' %>" /></a>
    </div>
   <h1 class="m-5 ml-8 mr-8 text-4xl mt-10 mx-auto">Koal</h1>
-  <p class="m-5 ml-8 mr-8 text-2xl mx-auto">The best of amateur writing in one beautiful, mobile-friendly website.</p>
+  <p class="m-5 ml-8 mr-8 text-2xl mx-auto">The best of amateur writing in one simple, mobile-friendly website.</p>
   <p class="m-5 ml-8 mr-8 text-xl mx-auto">All stories here are curated, “best of the best” collections from years of reading amateur fiction from the nooks & corners of the internet. Many stories are now hard to find & only available on obscure sites or newsgroups, or behind paywalls. This is an effort to consolidate all of them in a single place, and also build a beautiful reading experience to enjoy these timeless words.</p>
 </header>
 
