--- a/app/views/stories/index.erb
+++ b/app/views/stories/index.erb
@@ -34,5 +34,5 @@ Koal curates over <%= Story.count %> stories (from <%= Author.count %> authors) 
 
 
 <footer class="container flex mx-auto px-4 mb-24 mt-10 leading-normal border-grey-darkest pt-6 border-t">
-  <p class="w-auto">Copyright &copy; Vishnu Gopal. All stories belong to their respective authors and are reproduced here with permission.</p>
+  <p class="w-auto">Copyright &copy; Vishnu Gopal. All stories belong to their respective authors. When at all possible, authors have been contacted for permission to reproduce their stories here.</p>
 </footer>
