--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -2,43 +2,40 @@
 <% content_for :description do -%><%= @story.description %><% end -%>
 
 
-<header class="flex flex-row mb-6 mt-6">
+<header class="story">
   <div class="flex-none w-8 m-5">
     <a href="<%= root_path %>"><img class="max-w-full max-h-full" src="<%= asset_pack_path 'images/logo.png' %>" /></a>
   </div>
-  <div class="flex-1 mt-6 mr-2">
-    <nav><a href="" rel="author"><%= @story.author.name %>'s</a></nav>
-    <h2 class="font-semibold text-3xl"><%= @story.name %></h2>
+  <div class="flex-1 mt-6 mr-2 align-text-bottom">
+    <nav><a href="" rel="author"><%= @story.author.name %></a></nav>
+    <h2><%= @story.name %></h2>
   </div>
 </header>
 
-<div class="container lg:w-3/5 md:w-4/5 mx-auto px-4 leading-normal text-xl">
+<section class="container story">
 <% if @chapter.first? && @story.intro -%>
-  <blockquote class="mx-10 mb-20 mt-20">
+  <blockquote>
     <%= @story.intro.html_safe %>
   </blockquote>
 <% end -%>
-
-  <h3 class="font-semibold text-2xl mb-6"><%= @chapter.title %></h3>
-
+  <h3><%= @chapter.title %></h3>
   <%= @chapter.contents.html_safe %>
-
 <% if @chapter.last? && @story.outro -%>
-  <blockquote class="mx-10 mb-20 mt-20">
+  <blockquote>
     <%= @story.outro.html_safe %>
   </blockquote>
 <% end -%>
-</div>
+</section>
 
-<footer class="container flex mx-auto px-4 mb-24 mt-6 leading-normal border-grey-darkest pt-6 border-t">
+<footer class="container">
   <nav class="flex-1">
-    <% unless @chapter.first? -%>
+<% unless @chapter.first? -%>
     <a class="inline-block" href="<%= story_path(id: @story.id, slug: @story.slug, chapter_order: @chapter.order - 1) %>">Previous Chapter</a>
-    <% end -%>
-    <% unless @chapter.first? || @chapter.last? -%>|<% end -%>
-    <% unless @chapter.last? -%>
+<% end -%>
+<% unless @chapter.first? || @chapter.last? -%>|<% end -%>
+<% unless @chapter.last? -%>
     <a class="inline-block" href="<%= story_path(id: @story.id, slug: @story.slug, chapter_order: @chapter.order + 1) %>">Next Chapter</a>
-    <% end -%>
+<% end -%>
   </nav>
   <p class="w-1/3 md:w-auto"><%= @story.copyright_notice %></p>
 </footer>
