Tweak layouts and styling

--- a/app/views/errors/show.html.erb
+++ b/app/views/errors/show.html.erb
@@ -1,5 +1,4 @@
-<%= render "stories/index_meta" -%>
-<%= render "stories/index_header" -%>
+<%= render "stories/header" -%>
 
 <section class="container index">
 <% case @status_code -%>
@@ -12,4 +11,4 @@
 <% end -%>
 </section>
 
-<%= render "stories/index_footer" -%>
+<%= render "stories/footer" -%>
