--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,5 +1,11 @@
-<%= render "index_meta" -%>
-<%= render "index_header" -%>
+<% content_for :title do -%>
+The best of amateur writing in one simple, mobile-friendly website.
+<% end -%>
+<% content_for :description do -%>
+Koal curates over <%= Story.count %> stories (from <%= Author.count %> authors) — amateur writing from all across the internet and presents it in a readable, mobile-friendly form.
+<% end -%>
+
+<%= render "header" -%>
 
 <section class="container index">
   <section class="about">
@@ -22,4 +28,4 @@
   </section>
 </section>
 
-<%= render "index_footer" -%>
+<%= render "footer" -%>
