--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,5 +1,4 @@
-<%= render "index_meta" -%>
-<%= render "index_header" -%>
+<%= render "header" -%>
 
 <section class="container index">
 <h2>Upload Story</h2>
@@ -15,4 +14,4 @@
 <% end %>
 </section>
 
-<%= render "index_footer" -%>
+<%= render "footer" -%>
