--- a/app/views/stories/_header.html.erb
+++ b/app/views/stories/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="container index">
+<header class="container">
   <div class="w-12 mb-5">
     <a href="<%= root_path %>"><img class="max-w-full max-h-full" src="<%= asset_pack_path 'images/logo.png' %>" /></a>
    </div>
