--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -7,7 +7,7 @@ Koal curates over <%= Story.count %> stories (from <%= Author.count %> authors) 
 
 <%= render "header" -%>
 
-<section class="container index">
+<main>
   <section class="about">
     <h1>Koal</h1>
     <p>Koal collects the best of amateur writing in one simple, mobile-friendly website.</p>
@@ -26,6 +26,6 @@ Koal curates over <%= Story.count %> stories (from <%= Author.count %> authors) 
   <% end -%>
   </ul>
   </section>
-</section>
+</main>
 
 <%= render "footer" -%>
