Fixing error page

--- a/app/views/errors/show.html.erb
+++ b/app/views/errors/show.html.erb
@@ -1,6 +1,6 @@
 <%= render "stories/header" -%>
 
-<section class="container index">
+<main>
 <% case @status_code -%>
 <% when '404' -%>
 <h2>Couldn't find that page</h2>
@@ -9,6 +9,6 @@
 <h2>Something went wrong</h2>
 <p>Koal is still in active development, so things might break here. Fortunately, we've recorded this error, so things will improve soon!</p>
 <% end -%>
-</section>
+</main>
 
 <%= render "stories/footer" -%>
